prevent button squish onsmall scenario list

--- a/src/interface/src/app/plan/plan-summary/plan-scenarios-list/plan-scenarios-list.component.scss
+++ b/src/interface/src/app/plan/plan-summary/plan-scenarios-list/plan-scenarios-list.component.scss
@@ -2,6 +2,7 @@
 @use '@angular/material' as mat;
 @import 'mixins';
 @import 'colors';
+@import 'media';
 
 :host {
   display: flex;
@@ -43,6 +44,13 @@
     font-size: 18px;
     font-weight: 600;
   }
+
+  @include on-small() {
+    flex-direction: column-reverse;
+    height: unset;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
 }
 
 .sort-header {
@@ -57,6 +65,11 @@
   display: flex;
   flex-direction: row;
   gap: 8px;
+        
+  @include on-small() {
+    width: 100%;
+    justify-content: space-between;
+  }
 }
 
 app-section-loader {
@@ -66,10 +79,7 @@ app-section-loader {
   flex: 1;
 }
 
-.custom-tab-group::ng-deep
-  .mat-mdc-tab-header
-  .mat-mdc-tab-label-container
-  .mat-mdc-tab {
+.custom-tab-group::ng-deep .mat-mdc-tab-header .mat-mdc-tab-label-container .mat-mdc-tab {
   flex-grow: 0;
 }
 
